syntax = "proto3";

package ru.expanse.quader.lib.api.proto.bot;

option java_package = "ru.expanse.quader.lib.api.proto.bot";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

service ShutDownBotService {
    rpc ShutDown(ShutDownRequest) returns (google.protobuf.Empty);
}

message ShutDownRequest {
    string operation_key = 1;
}